--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -10774,7 +10774,7 @@ textarea.form-control-lg {
 }
 .create-event-button-text {
   font-size: 1rem;
-  color: #0000FF;
+  color: #000033;
 }
 .create-event-button-text-box {
   position: absolute;
